--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,28 @@
 </head>
 <body>
   <!-- <%= htmlWebpackPlugin.options.version %>-->
+  <ul>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+  </ul>
   
 </body>
 </html>
