--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,6 @@
   <title>Toys shop</title>
 </head>
 <body>
-  <div id="app">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos eaque alias a repudiandae dolorem impedit tempora consectetur voluptatibus, eveniet vel deleniti consequuntur dolor. Fugit minima ipsum nemo officiis beatae suscipit!
-  </div>
-  
+  <div id="app"></div>
 </body>
 </html>
